add content to section 1. add Img

--- a/index.html
+++ b/index.html
@@ -9,11 +9,32 @@
 </head>
 
 <body>
-  <div class="section1"></div>
-  <div class="section2"></div>
-  <div class="section3"></div>
-  <div class="section4"></div>
-  <div class="footer"></div>
+
+  <!-- section one content   -->
+  <div class="section1">
+    <div class="s1-upper">
+        <div><H2>Stray No More</h2></div>
+        <div class="section1-links">
+            <div><a href="">Dog's</a></div>
+            <div><a href="">Cats's</a></div>
+            <div><a href="">Other</a></div>
+        </div>
+    </div> 
+    <div class="s1-lowwer">
+        <div class="s1-rw2-clmn1">
+            <div><h1>Adopt a pet today!</h1></div>
+            <div>Did you know 1.5 million shelter animals are eauthanized every year in the United States? We are committed to finding pets a warm and welcoming home. </div>
+            <button class="sign-up-button">Sign up</button>
+        </div>
+        <div>
+            <img src="images/pexels-bii-13646158.jpg" alt="cute kitten">
+        </div>    
+    </div>   
+  </div>
+  <div class="section2">test2</div>
+  <div class="section3">test3</div>
+  <div class="section4">test4</div>
+  <div class="footer">testf</div>
     
 </body>
 </html>
