Finish section one layout

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div class="s1-rw2-clmn1">
             <div><h1>Adopt a pet today!</h1></div>
             <div>Did you know 1.5 million shelter animals are eauthanized every year in the United States? We are committed to finding pets a warm and welcoming home. </div>
-            <button class="sign-up-button">Sign up</button>
+            <button class="s1-sign-up-button">Sign up</button>
         </div>
         <div>
-            <img src="images/pexels-bii-13646158.jpg" alt="cute kitten">
+            <img class="s1-img"src="images/pexels-bii-13646158.jpg" alt="cute kitten">
         </div>    
     </div>   
   </div>
