Rename section one img and add section two content

--- a/index.html
+++ b/index.html
@@ -27,11 +27,20 @@
             <button class="s1-sign-up-button">Sign up</button>
         </div>
         <div>
-            <img class="s1-img"src="images/pexels-bii-13646158.jpg" alt="cute kitten">
+            <img class="s1-img"src="images/Main.jpg" alt="cute kitten">
         </div>    
     </div>   
   </div>
-  <div class="section2">test2</div>
+  <!-- section two content -->
+  <div class="section2">
+    <div class="s2-header"><h2>Succesful adoptions!</h2></div>
+    <div class="img-container">
+      <img class="img-succes" src="images/bella.jpg" alt="cute cat">
+      <img class='img-succes' src="images/buddy.jpg" alt="cute dog">
+      <img class='img-succes' src="images/luna.jpg" alt="cute cat">
+      <img class='img-succes' src="images/max.jpg" alt="cute dog">
+    </div>
+  </div>
   <div class="section3">test3</div>
   <div class="section4">test4</div>
   <div class="footer">testf</div>
