finish section two content layout

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </div> 
     <div class="s1-lowwer">
         <div class="s1-rw2-clmn1">
-            <div><h1>Adopt a pet today!</h1></div>
-            <div>Did you know 1.5 million shelter animals are eauthanized every year in the United States? We are committed to finding pets a warm and welcoming home. </div>
+            <div class="s1-header"><h1>Adopt a pet today!</h1></div>
+            <div class="intro">Did you know 1.5 million shelter animals are eauthanized every year in the United States? We are committed to finding pets a warm and welcoming home. </div>
             <button class="s1-sign-up-button">Sign up</button>
         </div>
         <div>
@@ -35,10 +35,22 @@
   <div class="section2">
     <div class="s2-header"><h2>Succesful adoptions!</h2></div>
     <div class="img-container">
-      <img class="img-succes" src="images/bella.jpg" alt="cute cat">
-      <img class='img-succes' src="images/buddy.jpg" alt="cute dog">
-      <img class='img-succes' src="images/luna.jpg" alt="cute cat">
-      <img class='img-succes' src="images/max.jpg" alt="cute dog">
+      <div class="s-2-img">
+        <img class="img-succes" src="images/bella.jpg" alt="cute cat">
+        <p class="illustration"> This is Bella! Once a stray cat but now has a place to call home!</p>
+      </div>
+      <div class="s-2-img">
+        <img class='img-succes' src="images/buddy.jpg" alt="cute dog">
+        <p class="illustration">This is Buddy! Once a stray dog but now has a place to call home!</p>
+      </div>
+      <div class="s-2-img">
+        <img class='img-succes' src="images/luna.jpg" alt="cute cat">
+        <p class="illustration">This is Luna! Once a stray cat but now has a place to call home!</p>
+      </div>
+      <div class="s-2-img">
+        <img class='img-succes' src="images/max.jpg" alt="cute dog">
+        <p class="illustration">This is Max! Once a stray dog but now has a place to call home!</p>
+      </div>
     </div>
   </div>
   <div class="section3">test3</div>
