add and syle section three content

--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
       </div>
     </div>
   </div>
-  <div class="section3">test3</div>
+  <!-- section three content -->
+  <div class="section3">
+    <div class="testimonial">
+      <p> Stray No More has helped me get through a very dark time in my life. I was battling depression and was suggested getting a pet would help me get through my rough patch. I reached out to Stray No More and you could tell that they were very passionate about animals. They were devoted to finding me the perfect pet. Going on four years and im a proud owner of Duke! <strong> <span class="jhon"><br> -Jhon Doe</p></span></strong>
+    </div>
+  </div>
   <div class="section4">test4</div>
   <div class="footer">testf</div>
     
