--- a/index.html
+++ b/index.html
@@ -59,8 +59,15 @@
       <p> Stray No More has helped me get through a very dark time in my life. I was battling depression and was suggested getting a pet would help me get through my rough patch. I reached out to Stray No More and you could tell that they were very passionate about animals. They were devoted to finding me the perfect pet. Going on four years and im a proud owner of Duke! <strong> <span class="jhon"><br> -Jhon Doe</p></span></strong>
     </div>
   </div>
+
+  <!-- section four content -->
   <div class="section4">test4</div>
-  <div class="footer">testf</div>
     
+<!-- footer content -->
+  <footer>
+    <div class="footer">
+      <p class="footer-text">Copyright <span>&copy;</span> The Odin Project 2023</p>
+     </div>
+  </footer>
 </body>
 </html>
