finish section four and clomplete excersise

--- a/index.html
+++ b/index.html
@@ -41,27 +41,38 @@
       </div>
       <div class="s-2-img">
         <img class='img-succes' src="images/buddy.jpg" alt="cute dog">
-        <p class="illustration">This is Buddy! Once a stray dog but now has a place to call home!</p>
+        <p class="illustration">This is Buddy! He love's to play fetch with his new familly!</p>
       </div>
       <div class="s-2-img">
         <img class='img-succes' src="images/luna.jpg" alt="cute cat">
-        <p class="illustration">This is Luna! Once a stray cat but now has a place to call home!</p>
+        <p class="illustration">This is Luna! She enjoys stetching in the comfort of her own home!</p>
       </div>
       <div class="s-2-img">
         <img class='img-succes' src="images/max.jpg" alt="cute dog">
-        <p class="illustration">This is Max! Once a stray dog but now has a place to call home!</p>
+        <p class="illustration">This is Max! He enjoys snuggling up to his familly!</p>
       </div>
     </div>
   </div>
   <!-- section three content -->
   <div class="section3">
     <div class="testimonial">
-      <p> Stray No More has helped me get through a very dark time in my life. I was battling depression and was suggested getting a pet would help me get through my rough patch. I reached out to Stray No More and you could tell that they were very passionate about animals. They were devoted to finding me the perfect pet. Going on four years and im a proud owner of Duke! <strong> <span class="jhon"><br> -Jhon Doe</p></span></strong>
+      <p> Stray No More has helped me get through a very dark time in my life. I was battling depression and was suggested getting a pet would help me get through my rough patch. I reached out to Stray No More and you could tell that they were very passionate about animals. They were devoted to finding me the perfect pet. Going on four years and im a proud owner of Duke! <strong> <span class="jhon"><br> -John Doe</p></span></strong>
     </div>
   </div>
 
   <!-- section four content -->
-  <div class="section4">test4</div>
+  <div class="section4">
+    <div class="s4-container">
+        <div class="s4-text">
+          <h2 class="s4-header">Call to action! It's time!</h2>
+          <p class="s4-p">Sign up and stay up to date with our current animals looking for a new familly.</p>
+        </div>
+        <div class="s4-button">
+            <button class="s4-sign-up-button">Sign up</button>
+
+        </div>
+    </div>
+  </div>
     
 <!-- footer content -->
   <footer>
