--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <!-- footer content -->
   <footer>
     <div class="footer">
-      <p class="footer-text">Copyright <span>&copy;</span> The Odin Project 2023</p>
+      <p class="footer-text">Copyright <span>&copy;</span> Stray No More 2023</p>
      </div>
   </footer>
 </body>
